On branch master  Your branch is up-to-date with 'origin/master'.  Changes to be committed: 	modified:   References.bib 	modified:   modules/trie/trie.aux 	new file:   modules/trie/trie.bbl 	modified:   modules/trie/trie.bcf 	new file:   modules/trie/trie.blg 	modified:   modules/trie/trie.log 	modified:   modules/trie/trie.pdf 	modified:   modules/trie/trie.tex

--- a/References.bib
+++ b/References.bib
@@ -48,4 +48,12 @@
 	author={Borger, E. and Stark Robert F.}, 
 	year={2003}}
 
+@misc{wiki:xxx,
+    author = "Wikipedia contributors",
+    title = "Tree (data structure) --- Wikipedia{,} The Free Encyclopedia",
+    year = "2017",
+    url = "https://en.wikipedia.org/w/index.php?title=Tree_(data_structure)&oldid=813972413",
+    note = "[Online; accessed 15-December-2017]"
+				      }
+
 \end{filecontents}
