--- a/modules/trie/trie.tex
+++ b/modules/trie/trie.tex
@@ -12,6 +12,7 @@
 	   ]
 	   {biblatex}
 \usepackage{mathtools}
+\usepackage{enumitem}
 \author{}
 \title{Trie}
 \date{}
@@ -34,7 +35,25 @@ A simple kind of trie that everyone has used is a list: \\
 	  child { node {4}
 	    child { node {5} } } } };
 \end{tikzpicture}
-
+\section{Trie Terminology\cite{wiki:xxx}}
+	\begin{enumerate}[label=\textbf{\alph*})]
+	\item [Root]--  The top (first) node in a tree.
+	\item	[Child]--  A node directly connected to another node when moving away from the Root.
+	\item	[Parent]--  The converse notion of a child.
+	\item	[Siblings]--  A group of nodes with the same parent.
+	\item	[Descendant]--  A node reachable by repeated proceeding from parent to child.
+	\item	[Ancestor]--  A node reachable by repeated proceeding from child to parent.
+	\item	[Leaf]\footnote{a.k.a. External Node}--  A node with no children.
+	\item	[Branch\footnote{a.k.a. Internal Node}]--  A node with at least one child.
+	\item	[Degree]--  The number of subtrees of a node.
+	\item	[Edge]--  The connection between one node and another.
+	\item	[Path]--  A sequence of nodes and edges connecting a node with a descendant.
+	\item	[Level]--  The level of a node is defined by 1 + (the number of connections between the node and the root).
+	\item	[Node Height]--  The height of a node is the number of edges on the longest path between that node and a leaf.
+	\item	[Tree Height]--  The height of a tree is the height of its root node.
+	\item	[Depth]--  The depth of a node is the number of edges from the tree's root node to the node.
+	\item [Forest]-- A forest is a set of n $\geq  0$ disjoint trees.
+	\end{enumerate}
 \printbibliography
 \end{document}
 
