new file:   modules/storage_state/storage_state.aux 	new file:   modules/storage_state/storage_state.bbl 	new file:   modules/storage_state/storage_state.bcf 	new file:   modules/storage_state/storage_state.blg 	new file:   modules/storage_state/storage_state.log 	new file:   modules/storage_state/storage_state.pdf 	new file:   modules/storage_state/storage_state.run.xml 	renamed:    modules/storage_state/template.tex -> modules/storage_state/storage_state.tex 	modified:   offwhtp/off-whitepaper.log 	modified:   offwhtp/off-whitepaper.pdf

--- a/modules/storage_state/storage_state.tex
+++ b/modules/storage_state/storage_state.tex
@@ -12,13 +12,13 @@
 	   {biblatex}
 \usepackage{mathtools}
 \author{}
-\title{#NAME#}
+\title{Storage State}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: \texttt{ss}
+\paragraph{Description}: The storage state refers to information particular to a given account while that account's associated EVM code runs.
 
 \printbibliography
 \end{document}
