new file:   modules/world_state/world_state.aux 	new file:   modules/world_state/world_state.bbl 	new file:   modules/world_state/world_state.bcf 	new file:   modules/world_state/world_state.blg 	new file:   modules/world_state/world_state.log 	new file:   modules/world_state/world_state.pdf 	new file:   modules/world_state/world_state.run.xml 	renamed:    modules/world_state/template.tex -> modules/world_state/world_state.tex

--- a/modules/world_state/world_state.tex
+++ b/modules/world_state/world_state.tex
@@ -12,13 +12,13 @@
 	   {biblatex}
 \usepackage{mathtools}
 \author{}
-\title{#NAME#}
+\title{World State}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: \texttt{ws}
+\paragraph{Description}: Also known as synthesized state. There is one World State per block. The world state consists of all the state transitions that have taken place up to that point to reach the synthesized state.
 
 \printbibliography
 \end{document}
