deleted:    modules/verification/notes 	new file:   modules/verification/verification.aux 	new file:   modules/verification/verification.bcf 	new file:   modules/verification/verification.log 	new file:   modules/verification/verification.pdf 	new file:   modules/verification/verification.run.xml 	renamed:    modules/verification/template.tex -> modules/verification/verification.tex

--- a/modules/verification/verification.tex
+++ b/modules/verification/verification.tex
@@ -12,13 +12,13 @@
 	   {biblatex}
 \usepackage{mathtools}
 \author{}
-\title{#NAME#}
+\title{Verification}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: \texttt{verification}
+\paragraph{Description}: The process in The EVM that verifies Ommer Headers.
 
 \printbibliography
 \end{document}
