renamed:    modules/turing-complete/template.tex -> modules/turing-complete/turing_complete.tex

--- a/modules/turing-complete/turing_complete.tex
+++ b/modules/turing-complete/turing_complete.tex
@@ -12,13 +12,13 @@
 	   {biblatex}
 \usepackage{mathtools}
 \author{}
-\title{#NAME#}
+\title{Turing Completeness}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: N/A
+\paragraph{Description}: Turing Completeness
 
 \printbibliography
 \end{document}
