renamed:    modules/dynamic/bloom_filter/template.tex -> modules/dynamic/bloom_filter/bloom_filter.tex 	modified:   modules/dynamic/contract_creation/contract_creation.tex 	deleted:    modules/dynamic/message_passing/template.tex 	modified:   off-whitepaper 	modified:   modules/static/account/account_creation/account_creation.tex 	modified:   modules/static/account/balance/balance.tex 	modified:   off-whitepaper (modified content) 	.idea/

--- a/modules/dynamic/contract_creation/contract_creation.tex
+++ b/modules/dynamic/contract_creation/contract_creation.tex
@@ -20,7 +20,7 @@
 \begin{document}
 \maketitle
 \paragraph{Notation}: \texttt{contract\_create}
-\paragraph{Description}: Contract creation transactions are equal the recurisive length prefix of an empty byte-sequence. 
+\paragraph{Description}: Contract creation transactions are equal the recursive length prefix of an empty byte-sequence.
 
 \end{document}
 
