--- a/modules/dynamic/bloom_filter/bloom_filter.tex
+++ b/modules/dynamic/bloom_filter/bloom_filter.tex
@@ -17,8 +17,8 @@
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: \texttt{logs\_bloom}
+\paragraph{Description}: The Bloom Filter is composed from indexable information (logger address and log topics) contained in each log entry from the receipt of each transaction in the transactions list.
 
 \printbibliography
 \end{document}
