modified:   off-whitepaper (modified content)

--- a/modules/static/account/balance/balance.tex
+++ b/modules/static/account/balance/balance.tex
@@ -19,8 +19,8 @@
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \texttt{bal}
-\paragraph{Description}: The amount of \textbf{Wei} \textsc{owned} by this account. \footnote{This formal notation is $\sigma[a]_b$}
+\paragraph{Notation}: \texttt{account\_bal}
+\paragraph{Description}: The amount of \textbf{Wei} \textsc{owned} by this account.
     \begin{itemize}
         \item Key/value pair stored inside the root hash. \footnote{$\texttt{\small TRIE}\big(L_I^*(\boldsymbol{\sigma}[a]_\mathbf{s})\big) \equiv \boldsymbol{\sigma}[a]_s$}
         \item $L_I^*$, is defined as the element-wise transformation of the base function\footnote{$L_I$, given as: $L_I\big( (k, v) \big) \equiv \big(\texttt{\small KEC}(k
